--- a/YahooFinanceApi/YahooFinanceApi.csproj
+++ b/YahooFinanceApi/YahooFinanceApi.csproj
@@ -1,18 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
+﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="15.0">
   <PropertyGroup>
     <TargetFramework>netstandard1.4</TargetFramework>
   </PropertyGroup>
   <PropertyGroup>
-    <Description>A handy Yahoo! Finance api wrapper, based on .NET standard 1.4</Description>
+    <Description>A handy Yahoo! Finance api wrapper, based on .NET standard 1.4.</Description>
     <Copyright>Copyright (c) 2016 SalmonThinLion</Copyright>
     <AssemblyTitle>YahooFinanceApi</AssemblyTitle>
-    <VersionPrefix>1.0.0</VersionPrefix>
+    <VersionPrefix>1.0.1</VersionPrefix>
     <Authors>SalmonThinLion</Authors>
     <TargetFramework>netstandard1.4</TargetFramework>
     <AssemblyName>YahooFinanceApi</AssemblyName>
     <PackageId>YahooFinanceApi</PackageId>
     <PackageTags>Yahoo;Finance;Stock;API</PackageTags>
     <PackageReleaseNotes>
+      [20/12/2016] Renamed historical methods, Added stock quotes functionality
       [19/12/2016] First release
     </PackageReleaseNotes>
     <PackageProjectUrl>https://github.com/salmonthinlion/YahooFinanceApi</PackageProjectUrl>
@@ -32,6 +33,7 @@
     <EmbeddedResource Include="**\*.resx" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="2.16.3" />
     <PackageReference Include="Flurl" Version="2.2.1" />
     <PackageReference Include="Flurl.Http" Version="1.1.1" />
     <PackageReference Include="NETStandard.Library" Version="1.6" />
