--- a/YahooFinanceApi/YahooFinanceApi.csproj
+++ b/YahooFinanceApi/YahooFinanceApi.csproj
@@ -6,19 +6,20 @@
     <Description>A handy Yahoo! Finance api wrapper, based on .NET standard 1.4.</Description>
     <Copyright>Copyright (c) 2016-* SalmonThinLion</Copyright>
     <AssemblyTitle>YahooFinanceApi</AssemblyTitle>
-    <VersionPrefix>1.0.5</VersionPrefix>
+    <VersionPrefix>1.0.6</VersionPrefix>
     <Authors>SalmonThinLion</Authors>
     <TargetFramework>netstandard1.4</TargetFramework>
     <AssemblyName>YahooFinanceApi</AssemblyName>
     <PackageId>YahooFinanceApi</PackageId>
     <PackageTags>Yahoo;Finance;Stock;API</PackageTags>
     <PackageReleaseNotes>
-      [21/05/2017] Fixes empty crumb exception when doing 2nd or more requests, added skipping of invalid records for history retrieval
-      [19/05/2017] Uses new Yahoo Finance Api
-      [18/05/2017] Added tag for revenue (Thanks for PR from @strtdusty)
-      [23/12/2016] Simplified api call
-      [20/12/2016] Renamed historical methods, Added stock quotes functionality
-      [19/12/2016] First release
+  [24/05/2017] Added lock to web call to ensure thread-safety
+  [21/05/2017] Fixes empty crumb exception when doing 2nd or more requests, added skipping of invalid records for history retrieval
+  [19/05/2017] Uses new Yahoo Finance Api
+  [18/05/2017] Added tag for revenue (Thanks for PR from @strtdusty)
+  [23/12/2016] Simplified api call
+  [20/12/2016] Renamed historical methods, Added stock quotes functionality
+  [19/12/2016] First release
     </PackageReleaseNotes>
     <PackageProjectUrl>https://github.com/salmonthinlion/YahooFinanceApi</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/salmonthinlion/YahooFinanceApi/blob/master/LICENSE</PackageLicenseUrl>
