--- a/YahooFinanceApi/YahooFinanceApi.csproj
+++ b/YahooFinanceApi/YahooFinanceApi.csproj
@@ -40,4 +40,7 @@
     <PackageReference Include="Flurl" Version="2.5.0" />
     <PackageReference Include="Flurl.Http" Version="2.0.1" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Lookup\" />
+  </ItemGroup>
 </Project>
