Fixes #12, added leaveZeroIfInvalidRow parameter for retrieving invalid rows

--- a/YahooFinanceApi/YahooFinanceApi.csproj
+++ b/YahooFinanceApi/YahooFinanceApi.csproj
@@ -13,7 +13,7 @@
     <PackageId>YahooFinanceApi</PackageId>
     <PackageTags>Yahoo;Finance;Stock;Quote;Eod;Dividend;Split</PackageTags>
     <PackageReleaseNotes>
-[20/09/2017] Added .NET Standard 2.0 support
+[20/09/2017] Added .NET Standard 2.0 support, added leaveZeroIfInvalidRow parameter for historical methods
 [15/07/2017] Better error message if yahoo returns 404(Not Found) exception.
 [14/07/2017] Added retry/re-establish mechanism if yahoo returns 401(Unauthorized) exception, optimized the locking mechanism
 [06/07/2017] Fix parsing for different culture
