--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,3 +14,5 @@ deploy:
 - provider: NuGet
   api_key:
     secure: acSSgAlUNA/OCqX0TVICWNqcNcYgBJi01ynOZwXGhTNGVNtRQiv4FIJFsoYnuSgB
+  on:
+    branch: master
