--- a/YahooFinanceApi/YahooFinanceApi.csproj
+++ b/YahooFinanceApi/YahooFinanceApi.csproj
@@ -6,13 +6,14 @@
     <Description>A handy Yahoo! Finance api wrapper, based on .NET standard 2.0</Description>
     <Copyright>Copyright (c) 2016-2017 Karl Wan</Copyright>
     <AssemblyTitle>YahooFinanceApi</AssemblyTitle>
-    <VersionPrefix>1.1.3</VersionPrefix>
+    <VersionPrefix>2.0.0-beta0</VersionPrefix>
     <Authors>Karl Wan</Authors>
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>YahooFinanceApi</AssemblyName>
     <PackageId>YahooFinanceApi</PackageId>
     <PackageTags>Yahoo;Finance;Stock;Quote;Eod;Dividend;Split</PackageTags>
     <PackageReleaseNotes>
+[18/10/2017] Removed timezone support. (Breaking change) All api call now reads and returns datetime in est instead of local timezone (Thanks for PR from @dshe)
 [8/10/2017] Added timezone support for historical api
 [5/10/2017] Added currency tag for stock quoting (Thanks for PR from @dshe)
 [20/09/2017] Added .NET Standard 2.0 support, added leaveZeroIfInvalidRow parameter for historical methods
@@ -48,5 +49,6 @@
     <PackageReference Include="CsvHelper" Version="2.16.3" />
     <PackageReference Include="Flurl" Version="2.2.1" />
     <PackageReference Include="Flurl.Http" Version="1.1.1" />
+    <PackageReference Include="TimeZoneConverter" Version="2.0.0" />
   </ItemGroup>
 </Project>
