--- a/YahooFinanceApi/YahooFinanceApi.csproj
+++ b/YahooFinanceApi/YahooFinanceApi.csproj
@@ -6,30 +6,19 @@
     <Description>A handy Yahoo! Finance api wrapper, based on .NET standard 2.0</Description>
     <Copyright>Copyright (c) 2016-2017 Karl Wan</Copyright>
     <AssemblyTitle>YahooFinanceApi</AssemblyTitle>
-    <VersionPrefix>2.0.0-beta1</VersionPrefix>
+    <VersionPrefix>2.0.0-beta2</VersionPrefix>
     <Authors>Karl Wan</Authors>
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>YahooFinanceApi</AssemblyName>
     <PackageId>YahooFinanceApi</PackageId>
     <PackageTags>Yahoo;Finance;Stock;Quote;Eod;Dividend;Split</PackageTags>
     <PackageReleaseNotes>
+[20/10/2017] Improved historical API
 [19/10/2017] Updated dependencies
-[18/10/2017] Removed timezone support. (Breaking change) All api call now reads and returns datetime in est instead of local timezone (Thanks for PR from @dshe)
+[18/10/2017] Removed timezone support. (Breaking change) All api call now reads and returns datetime in est instead of local timezone
 [8/10/2017] Added timezone support for historical api
-[5/10/2017] Added currency tag for stock quoting (Thanks for PR from @dshe)
+[5/10/2017] Added currency tag for stock quoting
 [20/09/2017] Added .NET Standard 2.0 support, added leaveZeroIfInvalidRow parameter for historical methods
-[15/07/2017] Better error message if yahoo returns 404(Not Found) exception.
-[14/07/2017] Added retry/re-establish mechanism if yahoo returns 401(Unauthorized) exception, optimized the locking mechanism
-[06/07/2017] Fix parsing for different culture
-[24/06/2017] Added split query, renamed GetHistoricalDividendsAsync to GetDividendsAsync, fix potential bug on unauthorized exception
-[31/05/2017] Fix redirect exception targeting the old .NET framework
-[24/05/2017] Added lock to web call to ensure thread-safety
-[21/05/2017] Fixes empty crumb exception when doing 2nd or more requests, added skipping of invalid records for history retrieval
-[19/05/2017] Uses new Yahoo Finance Api
-[18/05/2017] Added tag for revenue (Thanks for PR from @strtdusty)
-[23/12/2016] Simplified api call
-[20/12/2016] Renamed historical methods, Added stock quotes functionality
-[19/12/2016] First release
     </PackageReleaseNotes>
     <PackageProjectUrl>https://github.com/lppkarl/YahooFinanceApi</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/lppkarl/YahooFinanceApi/blob/master/LICENSE</PackageLicenseUrl>
