--- a/YahooFinanceApi/YahooFinanceApi.csproj
+++ b/YahooFinanceApi/YahooFinanceApi.csproj
@@ -14,6 +14,7 @@
     <PackageId>YahooFinanceApi</PackageId>
     <PackageTags>Yahoo;Finance;Stock;Quote;Eod;Dividend;Split</PackageTags>
     <PackageReleaseNotes>
+[12/12/2017] Fixed quote property case handling, improved tests
 [16/11/2017] Added Fields for newly added QueryAsync method
 [12/11/2017] Added QueryAsync method as a replacement of the original GetAsync method
 [28/10/2017] Performance boost for async call
@@ -24,7 +25,7 @@
 [8/10/2017] Added timezone support for historical api
 [5/10/2017] Added currency tag for stock quoting
 [20/09/2017] Added .NET Standard 2.0 support, added leaveZeroIfInvalidRow parameter for historical methods
-    </PackageReleaseNotes>
+</PackageReleaseNotes>
     <PackageProjectUrl>https://github.com/lppkarl/YahooFinanceApi</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/lppkarl/YahooFinanceApi/blob/master/LICENSE</PackageLicenseUrl>
     <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
@@ -36,6 +37,7 @@
     <GenerateNeutralResourcesLanguageAttribute>false</GenerateNeutralResourcesLanguageAttribute>
     <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
     <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
+    <Version>2.1.0-beta2</Version>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <LangVersion>latest</LangVersion>
