--- a/YahooFinanceApi/YahooFinanceApi.csproj
+++ b/YahooFinanceApi/YahooFinanceApi.csproj
@@ -54,5 +54,6 @@
     <PackageReference Include="CsvHelper" Version="12.1.2" />
     <PackageReference Include="Flurl" Version="2.8.1" />
     <PackageReference Include="Flurl.Http" Version="2.4.1" />
+    <PackageReference Include="NodaTime" Version="2.4.4" />
   </ItemGroup>
 </Project>
