--- a/YahooFinanceApi/YahooFinanceApi.csproj
+++ b/YahooFinanceApi/YahooFinanceApi.csproj
@@ -3,10 +3,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <PropertyGroup>
-    <Description>A handy Yahoo! Finance api wrapper, based on .NET standard 2.0</Description>
+    <Description>A handy Yahoo! Finance api wrapper, based on .NET Standard 2.0</Description>
     <Copyright>Copyright (c) 2016-2019 Karl Wan</Copyright>
     <AssemblyTitle>YahooFinanceApi</AssemblyTitle>
-    <VersionPrefix>3.0.0-beta1</VersionPrefix>
+    <VersionPrefix>3.0.0-beta2</VersionPrefix>
     <LangVersion>8.0</LangVersion>
     <Authors>Karl Wan</Authors>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -24,11 +24,10 @@
 [22/10/2017] Speed up historical retrieval
 [20/10/2017] Improved historical API
 [19/10/2017] Updated dependencies
-[18/10/2017] Removed timezone support. (Breaking change) All api call now reads and returns datetime in est instead of local timezone
-[8/10/2017] Added timezone support for historical api
-[5/10/2017] Added currency tag for stock quoting
-[20/09/2017] Added .NET Standard 2.0 support, added leaveZeroIfInvalidRow parameter for historical methods
-</PackageReleaseNotes>
+[18/10/2017] Removed timezone support. API now reads and returns datetime in est instead of local time
+[08/10/2017] Added timezone support for historical api
+[05/10/2017] Added currency tag for stock quoting
+[20/09/2017] Added .NET Standard 2.0 support, added leaveZeroIfInvalidRow parameter for historical</PackageReleaseNotes>
     <PackageProjectUrl>https://github.com/lppkarl/YahooFinanceApi</PackageProjectUrl>
     <PackageLicenseUrl></PackageLicenseUrl>
     <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
@@ -40,16 +39,16 @@
     <GenerateNeutralResourcesLanguageAttribute>false</GenerateNeutralResourcesLanguageAttribute>
     <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
     <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
-    <Version>3.0.0-beta1</Version>
+    <Version>3.0.0-beta2</Version>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <LangVersion>8.0</LangVersion>
+    <LangVersion>preview</LangVersion>
     <NullableContextOptions>enable</NullableContextOptions>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <LangVersion>8.0</LangVersion>
+    <LangVersion>preview</LangVersion>
     <NullableContextOptions>enable</NullableContextOptions>
   </PropertyGroup>
   <ItemGroup>
