--- a/YahooFinanceApi.Tests/YahooFinanceApi.Tests.csproj
+++ b/YahooFinanceApi.Tests/YahooFinanceApi.Tests.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <LangVersion>preview</LangVersion>
+    <LangVersion>8.0</LangVersion>
     <NullableContextOptions>enable</NullableContextOptions>
   </PropertyGroup>
 
