--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Setup .NET Core (Build)
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.1.100
+        dotnet-version: 6.0.x
     - name: Build with dotnet
       run: dotnet build --configuration Release
     - name: Test with dotnet
@@ -26,7 +26,7 @@ jobs:
       - name: Setup .NET Core (Deploy)
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: 3.1.100
+          dotnet-version: 6.0.x
       - name: Pack nuget package
         run: dotnet pack --configuration Release
       - name: Push package to nuget
