--- a/YahooFinanceApi/YahooFinanceApi.csproj
+++ b/YahooFinanceApi/YahooFinanceApi.csproj
@@ -2,9 +2,9 @@
   <PropertyGroup />
   <PropertyGroup>
     <Description>A handy Yahoo! Finance api wrapper, based on .NET standard 2.0</Description>
-    <Copyright>Copyright (c) 2016-2023 Karl Wan</Copyright>
+    <Copyright>Copyright (c) 2016-2024 Karl Wan</Copyright>
     <AssemblyTitle>YahooFinanceApi</AssemblyTitle>
-    <VersionPrefix>2.3.1</VersionPrefix>
+    <VersionPrefix>2.3.2</VersionPrefix>
     <LangVersion>latest</LangVersion>
     <Authors>Karl Wan</Authors>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -12,6 +12,7 @@
     <PackageId>YahooFinanceApi</PackageId>
     <PackageTags>Yahoo;Finance;Stock;Quote;Eod;Dividend;Split</PackageTags>
     <PackageReleaseNotes>
+[02/22/2024] Fixed issue with HTTP status code 500 when creating Yahoo session
 [12/10/2023] Fixed issue with HTTP status code 502 when creating Yahoo session
 [5/8/2023] Fixed too many requests error caused by missing user agent header
 [29/5/2023] Fixed approach to auth cookie and updated all dependencies
@@ -40,7 +41,7 @@
     <GenerateNeutralResourcesLanguageAttribute>false</GenerateNeutralResourcesLanguageAttribute>
     <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
     <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
-    <Version>2.3.1</Version>
+    <Version>2.3.2</Version>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <LangVersion>latest</LangVersion>
@@ -55,5 +56,6 @@
     <PackageReference Include="CsvHelper" Version="30.0.1" />
     <PackageReference Include="Flurl" Version="3.0.7" />
     <PackageReference Include="Flurl.Http" Version="3.2.4" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 </Project>
